Changelog 3.0.62
[BUG] Optimised RD fix implementation
[BUG] Improved RD season pack handling

Changelog 3.0.61
[BUG] Fix AD not deleting magnet if not cached

Changelog 3.0.6
[BUG] Fix AD Playback

Changelog 3.0.5
[BUG] Fix RD playback
[BUG] Improved 3D Filtering
[FEATURE] Added option to filer results by internet speed
[FEATURE] Added 'Cancel' button to smartplay window
[FEATURE] Added 'Icon Only' scraper display style option
[FEATURE] Added 'Minimum Percentage Left Before Showing Dialog option' for smartplay window
[FEATURE] Added option to hide resolver window when attempting to play
[FEATURE] Added 60 FPS filter

Changelog 3.0.1
[FEATURE] Handle Kodi database version for Omega 21

Changelog 3.0.0
[PERFORMANCE] Drop support for Python 2.x (Kodi Leia and below)
[PERFORMANCE] Optimize codebase for Python 3.x (Kodi Matrix and above)
[PERFORMANCE] Improvements to Smart Play
[PERFORMANCE] Improve playlist creation
[PERFORMANCE] Don't use strptime
[PERFORMANCE] Small perf improvement to supported file type checks
[PERFORMANCE] Optimize from_widget detection
[PERFORMANCE] Optimize movie release date handling
[PERFORMANCE] Use cache for pull_all if not page 1 and ignore_cache = True
[FEATURE] Introduce support for direct sources
[FEATURE] Better support for adaptive sources
[FEATURE] Better passing of movie aliases to providers
[FEATURE] Smoother resolver flow
[FEATURE] Convert add-on settings to new format
[FEATURE] Add AV1 filter
[FEATURE] Rework alias passing to scrapers
[FEATURE] Better identification of WEB and BLURAY sources
[FEATURE] Support clearlogo from TMDB
[FEATURE] Prioritize Trakt airdate metadata
[FEATURE] Update Seren logo for 3.0.0
[FEATURE] Icons for all menus
[FEATURE] Support package and provider icons
[FEATURE] Add Hebrew localizations
[FEATURE] Update pytz to 2022.7
[BUG] Improve Player resiliency and error handling (re-factor)
[BUG] Fix Multiple issues with player up next popup and track watched reported